<resources>
    <string name="app_name">MusicTheory</string>
    <string name="title_home">Меню</string>
    <string name="title_dashboard">Управление</string>
    <string name="title_notifications">Уведомления</string>
    <string name="title_training_test">Тесты</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">header</string>
    <string name="hello_blank_fragment2">body</string>
    <string name="hello_blank_fragment3">footer</string>
    <string name="dont_know">Не знаю</string>
    <!--    <string name="result_from">%1$d из %2$d</string>-->
    <string name="result_from">%1$d из %2$d вопросов</string>
    <string name="test_passed">Тест пройден</string>
    <string name="correct_test">Правильных тестов</string>
    <string name="available_test">Теперь доступны тесты:</string>
    <string name="category_title">Test Category</string>
    <string name="registration_title">Регистрация</string>
    <string name="login_edit_text">Логин</string>
    <string name="password_edit_text">Пароль</string>
    <string name="mail_edit_text">Почта</string>
    <string name="student_registration_fragment_registration_button">Зарегистрироваться</string>
    <string name="enter_title">Вход</string>
    <string name="enter_button">Вход</string>
    <string name="exit">Выйти</string>
    <string name="student_login_fragment_registration_button">Регистрация</string>
    <string name="personal_account_title">Личный кабинет</string>
    <string name="welcome_title">Добро пожаловать!</string>
    <string name="personal_account_back_button">Back</string>
    <string name="web_client_id">7061348269-mkqqh70081m84sj87040j6dupbmdsa62.apps.googleusercontent.com</string>
    <string name="account">Аккаунт</string>
    <string name="TestName">Название теста</string>
    <string name="question">Вопрос</string>
    <string name="correct_answer">Правильный ответ</string>
    <string name="incorrect_list">Список неправильных ответов</string>
    <string name="add_test">Добавить тест</string>
    <string name="change_theme">Сменить тему</string>
    <string name="add_test_navigation">Добавить тест</string>
    <string name="delete_tests">Удалить тесты</string>
    <string name="teacher">Учитель</string>
    <string name="num_stars">"5"</string>
    <string name="signup_question">Нет аккаунта?</string>
    <string name="have_account_question">Есть аккаунт?</string>
    <string name="enter_button_text">Авторизоваться</string>
    <string name="add_question">Добавить вопрос</string>
    <string name="attachment_url">Ссылка на вложения</string>
    <string name="add_answer">Добавить ответ</string>
    <string name="generation_seed_str">Зерно генерации</string>
</resources>