<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".account.presenter.fragments.AddQuestionFragment">
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <!-- TODO: Update blank fragment layout -->


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textlayout_text_question_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/buttons_start_and_end_margin"
            android:layout_marginStart="@dimen/buttons_start_and_end_margin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_question_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question"
                style="?attr/textAppearanceBody1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textlayout_attachment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/buttons_start_and_end_margin"
            android:layout_marginStart="@dimen/buttons_start_and_end_margin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textlayout_text_question_account"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_attachment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/attachment_url"
                android:textAppearance="?attr/textAppearanceBody1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textlayout_generation_seed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/buttons_start_and_end_margin"
            android:layout_marginStart="@dimen/buttons_start_and_end_margin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textlayout_attachment"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_generation_seed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/generation_seed_str"
                android:textAppearance="?attr/textAppearanceBody1"/>

    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:id="@+id/button_add_answer"
            android:text="@string/add_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorSecondary"
            app:shapeAppearance="?attr/roundedButton"
            android:layout_marginEnd="@dimen/buttons_start_and_end_margin"
            android:layout_marginStart="@dimen/buttons_start_and_end_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_answers_list"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="70dp"
            />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_answers_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/textlayout_generation_seed"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="1" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>