<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".account.presenter.fragments.AddTestFragment"
        android:layout_marginBottom="30dp"
    >


<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textlayout_test_name_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="@dimen/buttons_start_and_end_margin"
            android:layout_marginStart="@dimen/buttons_start_and_end_margin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_test_name_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/TestName"
                android:textAppearance="?attr/textAppearanceBody1"
                app:hintTextAppearance="?attr/textAppearanceBody1" />
    </com.google.android.material.textfield.TextInputLayout>





    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_question_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textlayout_test_name_account"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="1"
            android:visibility="visible" />

    <Button
            android:id="@+id/button_add_question_account"
            android:text="@string/add_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorSecondary"
            app:shapeAppearance="?attr/roundedButton"
            android:layout_marginEnd="@dimen/buttons_start_and_end_margin"
            android:layout_marginStart="@dimen/buttons_start_and_end_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_question_list"
            android:layout_marginTop="20dp"
            />


    <Button
            android:id="@+id/button_delete_question_account"
            android:text="@string/delete_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorSecondary"
            app:shapeAppearance="?attr/roundedButton"
            android:layout_marginEnd="@dimen/buttons_start_and_end_margin"
            android:layout_marginStart="@dimen/buttons_start_and_end_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_question_list"
            android:layout_marginTop="20dp"
            />


    <Button
            android:id="@+id/button_add_test_account"
            android:text="@string/add_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorSecondary"
            app:shapeAppearance="?attr/roundedButton"
            android:layout_marginEnd="@dimen/buttons_start_and_end_margin"
            android:layout_marginStart="@dimen/buttons_start_and_end_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_add_question_account"
            android:layout_marginTop="20dp"
            />

    <Button
            android:id="@+id/button_delete_test_account"
            android:text="@string/delete_tests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorSecondary"
            app:shapeAppearance="?attr/roundedButton"
            android:layout_marginEnd="@dimen/buttons_start_and_end_margin"
            app:layout_constraintTop_toBottomOf="@id/button_add_question_account"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>